Bug 125797 - Sidebar: keyboard navigation does not skip over disabled tabs
Summary: Sidebar: keyboard navigation does not skip over disabled tabs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: Sidebar-Accessibility Read-Only
  Show dependency treegraph
 
Reported: 2019-06-08 06:09 UTC by Jim Raykowski
Modified: 2023-08-08 19:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-06-08 06:09:56 UTC
Steps to repro:

1) Open a document
2) Open the Sidebar (Menu > View > Sidebar or Ctrl+F5)
3) Set document in read only mode (Menu > Edit > Edit Mode)
4) Press F6 until the Navigator deck title in the Sidebar gets focus rectangle
5) Press down arrow key
Focus moves to Sidebar Settings tab
6) Press down arrow key

Results: Focus stays on the Sidebar Settings tab

Expected Results: Focus moves to the next enabled tab.

I don't know of any deck other than the Navigator that is enabled when a document is in read only mode but if there is it won't be accessible using keyboard navigation. This might make a good beginner patch. It only requires to add a test for enabled at the same time as the test for visibility. See patch for bug 119631.
Comment 1 raal 2019-06-23 08:47:43 UTC
Confirm with Version: 6.4.0.0.alpha0+
Build ID: 9712f5d2316fa469b92f2f8092925e2cd4e8dd5b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11;
Comment 2 QA Administrators 2021-06-23 03:48:33 UTC Comment hidden (obsolete)
Comment 3 QA Administrators 2023-06-24 03:14:26 UTC Comment hidden (obsolete)
Comment 4 stragu 2023-07-27 21:05:31 UTC
Repro in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d0a62bd75b9a895c419aa165da648ab18f134d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also in 5.4:

Version: 5.4.0.3
Build ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group
Comment 5 Jim Raykowski 2023-08-08 05:53:10 UTC
Since this has been waiting to be fixed for a few years now and I've recently been poking around this part of the code again, and the Managed Changes tab is not disabled in read-only mode, I nominate myself to fix it :-)

Here is my proposed patch:
https://gerrit.libreoffice.org/c/core/+/155442
Comment 6 Commit Notification 2023-08-08 19:21:32 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/383e68da6c429c243c1e7be6699acaa942b712bc

tdf#125797 Sidebar: Skip over disabled tabbar tabs

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jim Raykowski 2023-08-08 19:25:28 UTC
Thanks to Rafael for the review